# databricks-container-image-proxy

./: .env.example  .gitignore  INSTALL.md  README.md  requirements.txt
.github/workflows/: build.yml
databricks_container_image_proxy/: dcip.py  pyproject.toml  settings.py
databricks_container_image_proxy/cli/: commands.py
databricks_container_image_proxy/compression/: image.py
databricks_container_image_proxy/databricks/: api.py
databricks_container_image_proxy/parsing/: image.py
databricks_container_image_proxy/terminal/: output.py
docker/: process.py
